k8s/edge_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
#Etat désirée pour l'application stateless catalog-service. Deployment spécifie la création d'un seul pod pour catalog-service
spec:
  replicas: 1 #Par défaut 1 - donc optionnel si 1 seul pod désiré.
  #Indication du label permettant de déterminer le pod à "répliquer". Doit correspondre à un label indiqué dans template
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      name: edge-service #nom du pod
      #déclaration du label permettant d'identifier le pod (doit correspondre à matchLabels ci-dessus)
      labels:
        app: edge-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: edge-service
          image: edge-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          # var d'env de configuration de catalog-service lors de son démarrage
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          livenessProbe:
            httpGet:
              port: 9000
              path: /actuator/health/liveness
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 9000
              path: /actuator/health/readiness
            initialDelaySeconds: 10
            periodSeconds: 15
          volumeMounts:
            - mountPath: /workspace/config
              name: edge-config-volume
      volumes:
        - name: edge-config-volume
          configMap:
            name: edge-config
