k8s/edge_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  #attachement d'un label pour filtrer
  labels:
    app: edge-service
spec:
  selector:
    app: edge-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
